<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_detector</name>
  <version>0.1.0</version>
  <description>RoboMaster armor detection and distance estimation node using OpenCV and PnP</description>
  <maintainer email="c1470759@outlook.com">kielas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>  <!-- 新增 -->
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>   <!-- 新增，视 ROS 发行版可能为 opencv -->
  <depend>rm_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>