<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_vision_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c1470759@outlook.com">kielas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_opencv_aim</depend>
  <depend>rm_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
